css spacing fixes

--- a/src/scss/ggs/_detail.scss
+++ b/src/scss/ggs/_detail.scss
@@ -14,8 +14,8 @@
 
 	.player-name{
 		@include siege;
-		font-size: 3rem;
-		margin-bottom: 1em;
+		font-size: 4rem;
+		margin: 0 0 0.5em 0.2em;
 	}
 }
 .detail-content{
