--- a/src/scss/mixins/_fonts.scss
+++ b/src/scss/mixins/_fonts.scss
@@ -1,5 +1,5 @@
 @mixin siege{
-	font-family: "Scout Cond Bd";
+	font-family: "Scout Cond Bd", sans-serif;
 }
 
 @mixin textshadow{
